@@ -140,6 +140,7 @@ Cacti CHANGELOG
 -feature: Add api call to associate graphs with their data sources
 -feature: New availability option "Ping or SNMP"
 -feature: Show more colors on a single color's page
+-feature: Exit is either a database or table does not exist
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
